--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="education-header">
                 <div>
                     <div class="university">香港大学, 香港</div>
-                    <div class="degree">Master of Computer Science</div>
+                    <div class="degree">Master of Science in Computer Science</div>
                 </div>
                 <div class="date">在读</div>
             </div>
