--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <div class="education-header">
                 <div>
                     <div class="university">香港大学, 香港</div>
-                    <div class="degree">Master of Science in Computer Science</div>
+                    <div class="degree">Master of Computer Science</div>
                 </div>
                 <div class="date">在读</div>
             </div>
@@ -319,6 +319,64 @@
             </div>
             <div class="tech-stack">
                 <strong>项目链接:</strong> <a href="https://github.com/MarkfuGod/Commissaire" target="_blank">github.com/MarkfuGod/Commissaire</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Extracurricular Experience</h2>
+        
+        <div class="experience-item">
+            <div class="experience-header">
+                <div>
+                    <div class="position">Robotics, Automation and IoT Programme</div>
+                    <div class="company">Participant</div>
+                </div>
+                <div class="date">07/2024-08/2024</div>
+            </div>
+            <div class="experience-description">
+                参与机器人、自动化和物联网相关课程学习，并参与项目实践活动
+            </div>
+        </div>
+
+        <div class="experience-item">
+            <div class="experience-header">
+                <div>
+                    <div class="position">Machine Learning Programme</div>
+                    <div class="company">Participant</div>
+                </div>
+                <div class="date">01/2023-02/2023</div>
+            </div>
+            <div class="experience-description">
+                参与机器学习相关课程学习，并参与项目实践活动
+            </div>
+        </div>
+    </div>
+
+    <div class="section">
+        <h2 class="section-title">Awards and Certificates</h2>
+        
+        <div class="project-item">
+            <div class="project-description">
+                <strong>软件著作权证书:</strong> 灵动指尖 - 基于手部康复与放松平台 (Agile Fingertip - The Platform of Hand Rehabilitation and Relaxation Based on Nimble Fingertips)
+            </div>
+        </div>
+
+        <div class="project-item">
+            <div class="project-description">
+                <strong>2024年:</strong> 机器人、自动化和物联网项目最佳展示团队称号及个人最高等级荣誉 (The Title of the Best Presenting Team and the Distinction (Highest) Personal Rank in the Robotics, Automation and IoT Programme)
+            </div>
+        </div>
+
+        <div class="project-item">
+            <div class="project-description">
+                <strong>2023年:</strong> 互联网+竞赛校级一等奖及省级三等奖 (The University-level First Prize and the Provincial-level Third Prize in the Internet plus Competition)
+            </div>
+        </div>
+
+        <div class="project-item">
+            <div class="project-description">
+                <strong>中关村创客大赛:</strong> 郑州大学赛区一等奖 (The First Prize in the Zhengzhou University Division of the Zhongguancun Guest Contest)
             </div>
         </div>
     </div>
