--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
 
         <div class="project-item">
             <div class="project-description">
-                <strong>中关村创客大赛:</strong> 郑州大学赛区一等奖 (The First Prize in the Zhengzhou University Division of the Zhongguancun Guest Contest)
+                <strong>2024年中关村创客大赛:</strong> 郑州大学赛区一等奖 (The First Prize in the Zhengzhou University Division of the Zhongguancun Guest Contest)
             </div>
         </div>
     </div>
