--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MarkfuGod - 简历</title>
+    <title>盖一帆 - 简历</title>
     <style>
         * {
             margin: 0;
@@ -238,7 +238,7 @@
 </head>
 <body>
     <div class="header">
-        <h1 class="name">MarkfuGod</h1>
+        <h1 class="name">盖一帆简历</h1>
         <div class="contact-info">
             <strong>Phone:</strong> +86 15604029747 / +852 98251473 | 
             <strong>E-mail:</strong> <a href="mailto:MarkfuGod@outlook.com">MarkfuGod@outlook.com</a> | 
@@ -253,7 +253,7 @@
             <div class="education-header">
                 <div>
                     <div class="university">香港大学, 香港</div>
-                    <div class="degree">Master of Computer Science</div>
+                    <div class="degree">Master of Science in Computer Science</div>
                 </div>
                 <div class="date">在读</div>
             </div>
@@ -269,7 +269,7 @@
                     <div class="university">郑州大学, 郑州, 中国</div>
                     <div class="degree">Bachelor of Software Engineering</div>
                 </div>
-                <div class="date">Sep 2021 - Jul 2025 (Expected)</div>
+                <div class="date">Sep 2021 - Jul 2025</div>
             </div>
             <ul class="education-details">
                 <li><strong>平均成绩:</strong> 86.5/100.0, GPA: 3.46/4.00</li>
