Update the pics

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <h2 class="section-title">Research Projects</h2>
         
         <div class="project-item">
-            <div class="project-title">[1] NL2BP - 自然语言到UML蓝图转换系统</div>
+            <div class="project-title">[1] <a href="NL2BP-Project-Highlight.html" target="_blank">NL2BP - 自然语言到UML蓝图转换系统</a></div>
             <div class="project-description">
                 创新的AI系统，通过多代理协作将自然语言需求自动转换为标准化的UML蓝图。本科毕业设计项目，主要负责文献调研、多代理平台部署、模型设计和评估工作。
             </div>
