Update CV: Add 2021-2024 scholarships and reorder awards by date

--- a/index.html
+++ b/index.html
@@ -358,13 +358,19 @@
         
         <div class="project-item">
             <div class="project-description">
-                <strong>软件著作权证书:</strong> 灵动指尖 - 基于手部康复与放松平台 (Agile Fingertip - The Platform of Hand Rehabilitation and Relaxation Based on Nimble Fingertips)
+                <strong>2024年:</strong> 机器人、自动化和物联网项目最佳展示团队称号及个人最高等级荣誉 (The Title of the Best Presenting Team and the Distinction (Highest) Personal Rank in the Robotics, Automation and IoT Programme)
             </div>
         </div>
 
         <div class="project-item">
             <div class="project-description">
-                <strong>2024年:</strong> 机器人、自动化和物联网项目最佳展示团队称号及个人最高等级荣誉 (The Title of the Best Presenting Team and the Distinction (Highest) Personal Rank in the Robotics, Automation and IoT Programme)
+                <strong>2024年中关村创客大赛:</strong> 郑州大学赛区一等奖 (The First Prize in the Zhengzhou University Division of the Zhongguancun Guest Contest)
+            </div>
+        </div>
+
+        <div class="project-item">
+            <div class="project-description">
+                <strong>2021-2024年:</strong> 郑州大学优秀学生奖学金 (Zhengzhou University Outstanding Student Scholarship for 2021, 2022, and 2024)
             </div>
         </div>
 
@@ -376,7 +382,7 @@
 
         <div class="project-item">
             <div class="project-description">
-                <strong>2024年中关村创客大赛:</strong> 郑州大学赛区一等奖 (The First Prize in the Zhengzhou University Division of the Zhongguancun Guest Contest)
+                <strong>软件著作权证书:</strong> 灵动指尖 - 基于手部康复与放松平台 (Agile Fingertip - The Platform of Hand Rehabilitation and Relaxation Based on Nimble Fingertips)
             </div>
         </div>
     </div>
