--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             </div>
             <ul class="education-details">
                 <li><strong>研究方向:</strong> 人工智能, 机器学习, 自然语言处理</li>
-                <li><strong>核心课程:</strong> Advanced Machine Learning, Natural Language Processing, Computer Vision, Deep Learning</li>
+                <li><strong>核心课程:</strong> Computational Intelligence and Machine Learning, Natural Language Processing, Deep Learning</li>
             </ul>
         </div>
 
@@ -272,7 +272,7 @@
                 <div class="date">Sep 2021 - Jul 2025</div>
             </div>
             <ul class="education-details">
-                <li><strong>平均成绩:</strong> 86.5/100.0, GPA: 3.46/4.00</li>
+                <li><strong>平均成绩:</strong> 86.12/100.0, GPA: 3.44/4.00</li>
                 <li><strong>研究领域:</strong> 人工智能代理系统, 自然语言处理, 软件工程</li>
                 <li><strong>核心课程:</strong> 高等数学, 线性代数, C语言程序设计, 数据结构, 概率论与数理统计, 离散数学, 操作系统, 数据库系统, 计算机组成原理, 计算机体系结构, 计算机网络</li>
                 <li><strong>语言能力:</strong> CET-4: 610, CET-6: 600, IELTS (Academic): 7.5 (6.5) - 2024年2月</li>
